# bgarmor

./: .gitignore  LICENSE  Makefile  README.md  _config.yml  build.py  export_presets.cfg  index.html  launcher.c  lin-build-bgarmor.sh  lin-build-data.sh  lin-build-launcher.sh  lin-build-release.sh  lin-minify-launcher.sh  project.godot  win-build-bgarmor.bat  win-build-data.bat  win-build-launcher.bat  win-build-release.bat  win-minify-launcher.bat  win-set-engine-icon.bat  win-set-icons.bat
_data/: toc.yml
_docs/: quickstart.md  scripts.md  structure.md
_docs/structure/: data.md  engine.md  index.md  launcher.md  source.md
_includes/: footer.html  header.html  sidebar.html
data/: Example Game.blend  LibPlayer.blend  LibScenery.blend  README.md  save.sav
data/scripts/: hud.py  minimap.py  player.py
docs/: README.md  index.html
engine/: .gitignore  README.md
launcher/: README.md  common.txt  config.json  launcher.py  metadata.txt
launcher/Linux/: common.txt  config.json  engine_executable.txt  python_executable.txt
launcher/Linux32/: engine_executable.txt  (+1 more)
pages/: index.md
release/: README.md
scenes/: editor.gd  editor.tscn  welcome.gd  welcome.tscn
scripts/: globals.gd
source/: Launcher.c  build-launcher.bat  launcher.c  launcher.py  lin-build-launcher.sh  metadata.txt  minify-launcher.bat  release_files.json  release_files.py  win-build-data.bat  win-build-launcher.bat  win-minify-launcher.bat  win-set-engine-icon.bat
source/launcher/: Cargo.toml  build.rs
source/launcher/.cargo/: config.toml
source/launcher/src/: main.rs
(+188 files in other folders)
